RESOLVED FIXED98808
Compilation problem in debug build on MIPS
https://bugs.webkit.org/show_bug.cgi?id=98808
Summary Compilation problem in debug build on MIPS
Balazs Kilvady
Reported 2012-10-09 11:42:00 PDT
Renaming RegisterFile to JSStack (https://bugs.webkit.org/show_bug.cgi?id=98717) caused a compilation problem in debug build on MIPS (and very likely on ARM_THUMB2) as in ASSERT conditions structure field name "registerFile" was replaced with type name "JSStack" and it should be "stack".
Attachments
Fix the replaced member name. (1.67 KB, patch)
2012-10-09 12:03 PDT, Balazs Kilvady
no flags
Fix the replaced member name. (2.22 KB, patch)
2012-10-10 01:25 PDT, Balazs Kilvady
fpizlo: review+
fpizlo: commit-queue-
Fix the replaced member name. (1.64 KB, patch)
2012-10-10 02:20 PDT, Balazs Kilvady
no flags
Balazs Kilvady
Comment 1 2012-10-09 12:03:56 PDT
Created attachment 167810 [details] Fix the replaced member name. Very likely the same problem appears in the ARM_THUMB2 #ifdef block at line #799
Mark Lam
Comment 2 2012-10-09 13:50:12 PDT
(In reply to comment #1) > Created an attachment (id=167810) [details] > Fix the replaced member name. > > Very likely the same problem appears in the ARM_THUMB2 #ifdef block at line #799 Yes, both the ARM_THUMB2 and MIPS cases have the typo. The (struct JITStackFrame, JSStack) should be (struct JITStackFrame, stack) as you pointed out. Can you please fix the ARM_THUMB2 case as well in your patch? Thanks.
Balazs Kilvady
Comment 3 2012-10-10 01:25:21 PDT
Created attachment 167955 [details] Fix the replaced member name. Typo fixed in ARM_THUMB2 block also. REGISTER_FILE_OFFSET macro could be renamed to STACK_OFFSET or STACK_FRAME_OFFSET as well.
Filip Pizlo
Comment 4 2012-10-10 01:40:58 PDT
Comment on attachment 167955 [details] Fix the replaced member name. You should rebase this patch. But it looks good.
Balazs Kilvady
Comment 5 2012-10-10 02:20:07 PDT
Created attachment 167961 [details] Fix the replaced member name. Applied to current master branch.
Alexey Proskuryakov
Comment 6 2012-10-10 11:09:47 PDT
Since you already had an r+, you could have put Filip's name in ChangeLog of the rebased patch.
WebKit Review Bot
Comment 7 2012-10-10 11:23:08 PDT
Comment on attachment 167961 [details] Fix the replaced member name. Clearing flags on attachment: 167961 Committed r130935: <http://trac.webkit.org/changeset/130935>
WebKit Review Bot
Comment 8 2012-10-10 11:23:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.