RegisterFile to JSStack rename fix for a struct member.

Compilation problem in debug build on MIPS
https://bugs.webkit.org/show_bug.cgi?id=98808

Patch by Balazs Kilvady <kilvadyb@homejinni.com> on 2012-10-10
Reviewed by Alexey Proskuryakov.

In ASSERT conditions structure field name "registerFile" was replaced
with type name "JSStack" and it should be "stack".

* jit/JITStubs.cpp:
(JSC::JITThunks::JITThunks): structure member name fix.

Canonical link: https://commits.webkit.org/116912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130935 268f45cc-cd09-0410-ab3c-d52691b4dbfc